--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+Logs/AssetImportWorker2.log
+Logs/AssetImportWorker3.log
+Logs/AssetImportWorker4.log
+Logs/shadercompiler-AssetImportWorker0.log
+UserSettings/Layouts/default-2021.dwlt
