Fix git ignore + microfix

--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,5 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
-Logs/AssetImportWorker2.log
-Logs/AssetImportWorker3.log
-Logs/AssetImportWorker4.log
-Logs/shadercompiler-AssetImportWorker0.log
+Logs/*.log
 UserSettings/Layouts/default-2021.dwlt
